--- a/src/ModCore/ModCore.csproj
+++ b/src/ModCore/ModCore.csproj
@@ -7,7 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="4.0.0-rc2" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-rc2" />
     <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-rc2" />
+    <PackageReference Include="DSharpPlus.Lavalink" Version="4.0.0-rc2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Localization\" />
   </ItemGroup>
 
 </Project>
