--- a/src/ModCore/ModCore.csproj
+++ b/src/ModCore/ModCore.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,10 +10,9 @@
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-rc2" />
     <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-rc2" />
     <PackageReference Include="DSharpPlus.Lavalink" Version="4.0.0-rc2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Localization\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.3" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.2" />
   </ItemGroup>
 
 </Project>
